五个看板不再全表扫：只捞这一页引用到的行（没上缓存，理由在下面）
第 4 项原计划是「给配置表加本地缓存」。真去做之前先算了一下代价，
换成了收窄查询范围 —— 结论写在这里，免得下次又有人想起缓存这条路。

## 为什么不加缓存

这几张表（活动配置、奖品配置、奖项、坑位映射）都是后台随时在改的配置：
  - 加本地缓存就要处理失效。而按目标拓扑这些页面在 admin 进程、
    C 端在网关进程，一个进程里的本地缓存对另一个进程的写入一无所知 ——
    「运营改完刷新页面还是旧值」这类问题最难查，因为它只在特定进程上复现；
  - 上分布式缓存则是为了一个「人点一下才跑一次」的后台页面引入一致性问题，
    收益与风险完全不成比例。

真正的问题也不是「查得太频繁」，而是「每次都把整张表捞回来」。

## 改法：按引用到的键收窄

这几张表捞回来之后都只被当作查找表用（map.get(...)），没有一处遍历全量，
所以按这一页真正引用到的键去捞，与捞全表结果完全一致：

  PrizePoolBoardService       3 次全表 -> 按 poolCodes / itemIds / activityCodes
  PrizeItemStockService       3 次全表 -> 按 prizeCodes / activityCodes / itemIds
  DrawPoolAnalysisService     3 次全表 -> 同上
  LotteryConfigBoardService   3 次全表 -> 按 lotteryCodes / activityCodes
  LotteryPrizeAnalysisService 1 次全表 -> 按规则里出现过的 lotteryCodes

marketing 里的无条件 list() 从 13 处降到 0。全仓还剩 7 处，都是该全表的：
字典、系统配置、角色、定时任务注册表 —— 它们本身就是「列出全部」的语义。

一处要小心的地方写进了注释：DrawPoolAnalysisService 的奖项必须按
grouped 里全部映射的 id 捞，不能只按现存奖池的 —— 孤儿映射（奖池已删）同样要
逐坑分析，漏了它们那几行会从「奖池没了」变成「奖项不存在」的误报。

顺带删掉 PrizeCatalog.mapAll()：它是我在第一轮为看板页预留的整表翻译入口，
而看板页最后都走了自己的 manager，零调用方。留着只会让下一个人以为
「整表捞是被推荐的做法」。

全量测试通过：admin 223 + ledger 25 + risk 11 + base 129 全绿。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>